// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Section component (SSR) > applies custom styles and classes 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">

<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background-color: #f0f0f0;" class="custom-section"><tbody><tr><td></td></tr></tbody></table>"
`;

exports[`Section component (SSR) > forwards additional HTML attributes 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">

<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style data-testid="section-test" title="Section Title"><tbody><tr><td></td></tr></tbody></table>"
`;

exports[`Section component (SSR) > renders correctly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">

<table align="center" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" style><tbody><tr><td></td></tr></tbody></table>"
`;
